--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DEV_PREVENTAS_VENTA_2024 = "10BktV2aNZJuQaKt6GzuHwOjJ-nCVLHQ4NvX5PpHY7Wg"
+DEV_PREVENTAS_VENTA_2024=10BktV2aNZJuQaKt6GzuHwOjJ-nCVLHQ4NvX5PpHY7Wg
+CREDENTIALS_FILE_PATH=credentials/gihelper-ecd24ac830f8.json
